<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yyd.bbcvplayer.MainActivity">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignBottom="@+id/buttinbegin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_select"
            android:textSize="50dp"
            android:id="@+id/textView"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/video_button"
            android:text = "@string/video_string"
            android:textSize="20dp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginTop="41dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/audio_string"
            android:textSize="20dp"
            android:textColor="@android:color/holo_green_dark"
            android:id="@+id/audio_button"
            android:layout_gravity="center" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/picture_string"
            android:id="@+id/picture_button"
            android:textSize="20dp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_gravity="center" />
        <Button
            android:id = "@+id/buttinbegin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text = "@string/file_internet"
            android:textSize="20dp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_gravity="center" />
        <Button
            android:id = "@+id/buttoncustom"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text = "@string/custom_string"
            android:textSize="20dp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>
