<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yyd.bbcvplayer.SettingActivity">


    <TextView
        android:id = "@+id/text_setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:visibility="visible"
        android:gravity="center"
        />
    <RelativeLayout
        android:id="@+id/panel_connect_mode_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_setting_title"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/panel_connect_mode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/setting_menu_select"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id = "@+id/spinner_connectmode"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                >
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/setting_menu"
            android:orientation="vertical"
            android:layout_below="@id/panel_connect_mode"
            android:layout_marginLeft="50dp"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/seting_menu_first"
                    android:textSize="20sp"
                    android:id="@+id/setting_menu_url"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id = "@+id/setting_content_url"
                    android:layout_toRightOf="@id/setting_menu_url"
                    android:layout_marginLeft="80dp"
                    android:text="@string/default_url"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"

                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/setting_menu_rtsp"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/setting_menu_second"
                    />
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@id/setting_menu_rtsp"
                    android:text="@string/default_rtsp"
                    />

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
